@@ -35,7 +35,7 @@ public class CategoriaServiceImplTest {
     }
 
     @Test
-    public void testGetAll_CuandoHayCategorias_DeberiaRetornarListaDeCategoriaDTO() {
+    public void testGetAllCuandoHayCategoriasDeberiaRetornarListaDeCategoriaDTO() {
         when(categoriaMock.getId()).thenReturn(1);
         when(categoriaMock.getNombre()).thenReturn("Tecnología");
 
@@ -55,8 +55,8 @@ public class CategoriaServiceImplTest {
     }
 
     @Test
-    public void testGetAll_CuandoNoHayCategorias_DeberiaRetornarListaVacia() {
-        when(categoriaRepository.findAll()).thenReturn(Arrays.asList());
+    public void testGetAllCuandoNoHayCategoriasDeberiaRetornarListaVacia() {
+        when(categoriaRepository.findAll()).thenReturn(List.of());
 
         List<CategoriaDTO> result = categoriaServiceImpl.getAll();
 
@@ -67,7 +67,7 @@ public class CategoriaServiceImplTest {
     }
 
     @Test
-    public void testConvertToDTO_DeberiaConvertirCategoriaCorrectamente() {
+    public void testConvertToDTODeberiaConvertirCategoriaCorrectamente() {
         Categoria categoria = new Categoria();
         categoria.setId(1);
         categoria.setNombre("Arte");
